# minimal-auroc-example

./: boringModel.py  main.py  pyproject.toml  requirements.txt  stlFakeDataModule.py  stlFakeDataset.py
fake/: fake_data_times_100.csv
