[tool.poetry]
name = "minimal-auroc-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
pytorch-lightning = "^1.2.10"
torchmetrics = "0.2.0"
python="^3.8"
pandas = "^1.2.4"
sklearn = "^0.0"
torch = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
